objects/ssot__UserGroupRelationship__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>User Group Relationship Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedUserGroupId__c</fullName>
        <label>Related User Group</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedUserId__c</fullName>
        <label>Related User</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UserGroupId__c</fullName>
        <label>User Group</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761228261_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserGroupRelationship_RelatedUserGro_rel</label>
        <referenceTo>ssot__UserGroup__dlm</referenceTo>
        <relationshipLabel>UserGroupRelationship_RelatedUserGro_rel</relationshipLabel>
        <relationshipName>rel_1697761228261_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761229082_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserGroupRelationship_UserGroupId_ma_rel</label>
        <referenceTo>ssot__UserGroup__dlm</referenceTo>
        <relationshipLabel>UserGroupRelationship_UserGroupId_ma_rel</relationshipLabel>
        <relationshipName>rel_1697761229082_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761229592_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserGroupRelationship_RelatedUserId__rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>UserGroupRelationship_RelatedUserId__rel</relationshipLabel>
        <relationshipName>rel_1697761229592_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>